package Game.Items;

public class Item
{

}
